# TradingBot-1.0

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  env.example  package-lock.json  package.json  pyproject.toml
scripts/: launch-chart.ps1
src/: config.js  index.js
src/ai/: llm-client.js  prompts.js
src/output/: dashboard.js  logger.js
src/scout/: __init__.py  cli.py  config.py
src/scout/agent/: __init__.py  brief.py  loop.py  models.py  prompts.py  run.py  tools.py
src/scout/data/: __init__.py  archive.py  harvest.py  http.py
src/scout/fundamentals/: __init__.py  concepts.py  fx.py  ingest.py  models.py  normalize.py  store.py
src/scout/harness/: __init__.py  build.py  cache.py  cost.py  errors.py  protocol.py  reasoning.py  structured.py
src/scout/metrics/: __init__.py  base.py  (+5 more)
src/tools/: check-cdp.js  score.js  show-log.js  test-llm.js
src/tradingview/: cdp-client.js  extractor.js
tests/: conftest.py  test_adapters.py  test_agent_brief.py  test_agent_loop.py  test_baselines.py  test_cache.py  test_cli_encoding.py  test_cost.py  test_evaluate.py  test_excludes.py  test_fx.py  test_ingest.py  test_ledger.py  test_normalize.py  test_parse_esef.py  test_parse_sec.py  test_pick.py  test_prices_cli.py  test_profile.py  test_quality.py  test_rank.py  test_reasoning.py  test_report.py  test_report_output.py  test_research_analysts.py  test_research_evidence.py  test_research_extract.py  test_research_memo.py  test_research_pipeline.py  test_risk.py  test_screen.py  test_source_companies_house.py  test_source_edinet.py  test_source_esef.py  test_source_opendart.py  test_source_sec.py  test_source_sec_fulltext.py  test_source_web.py  test_store.py  test_structured.py  (+1 more)
(+46 files in other folders)
